<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.movie_details.MovieDetailsFragment">

            <ImageView
                android:id="@+id/movie_thumbnail"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_movies"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/movie_release_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_thumbnail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@string/movie_title_template" />

            <LinearLayout
                android:id="@+id/movie_release_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/movie_budget_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/movie_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/movie_title"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/movies_item_padding_2dp"
                    android:text="@string/release_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/movie_release_date_template" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_budget_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/movie_genres_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/movie_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_layout"
                app:layout_constraintVertical_bias="0.01999998">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/movies_item_padding_2dp"
                    android:text="@string/movie_budget"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/movie_budget_template" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_genres_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/movies_item_padding_2dp"
                app:layout_constraintBottom_toTopOf="@+id/movie_average_vote_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/movie_title"
                app:layout_constraintTop_toBottomOf="@+id/movie_budget_layout"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/movies_item_padding_2dp"
                    android:text="@string/genres"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/movie_genres_template" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_average_vote_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/movie_thumbnail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/movie_release_layout"
                app:layout_constraintTop_toBottomOf="@+id/movie_genres_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/movies_item_padding_2dp"
                    android:text="@string/average_vote"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_average_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/movie_average_vote_template" />
            </LinearLayout>

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_overview_top_margin"
                android:textSize="@dimen/movie_overview_text_size_14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_thumbnail"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/movie_overview_template" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/included_layout"
        layout="@layout/movies_load_state_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>